# eyelink-track

./: .gitignore  .pre-commit-config.yaml  README.md  eyelink_track.spec  pyproject.toml
.github/workflows/: bot.yaml  build.yaml  code-style.yml  pytest.yml
eyelink_track/: __init__.py  _gui.py  config.py  record.py
eyelink_track/commands/: gui.py  main.py  sys_info.py  track.py
eyelink_track/config/: constants.py
eyelink_track/eye_link/: EyeLink.py  EyeLinkCoreGraphicsPsychoPy.py  __init__.py
eyelink_track/utils/: __init__.py  _checks.py  config.py  qt.py
