[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
]
dependencies = [
  'numpy>=1.21',
  'packaging',
  'psutil',
  'psychopy @ git+https://github.com/psychopy/psychopy',
  'qtpy',
]
description = 'Standalone eyelink calibration and recording with PsychoPy. '
keywords = [
  'eye-tracker',
  'eyelink',
  'python',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'eyelink_track'
readme = 'README.md'
requires-python = '>=3.9'
version = '0.4.0.dev0'

[project.gui-scripts]
eyelink_track-gui = 'eyelink_track.commands.gui:run'

[project.optional-dependencies]
all = [
  'eyelink_track[build]',
  'eyelink_track[style]',
  'eyelink_track[test]',
]
build = [
  'build',
  'twine',
]
full = [
  'eyelink_track[all]',
]
style = [
  'black',
  'codespell',
  'isort',
  'pydocstyle[toml]',
  'ruff',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest',
  'pytest-cov',
  'pytest-timeout',
]

[project.scripts]
eyelink_track = 'eyelink_track.commands.track:run'
eyelink_track-sys_info = 'eyelink_track.commands.sys_info:run'

[project.urls]
documentation = 'https://github.com/fcbg-platforms/eyelink-track'
homepage = 'https://github.com/fcbg-platforms/eyelink-track'
source = 'https://github.com/fcbg-platforms/eyelink-track'
tracker = 'https://github.com/fcbg-hp-meeg/eyelink-track/issues'

[tool.black]
extend-exclude = '''
(
      __pycache__
    | .github
    | setup.py
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py39']

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/eyelink_track/_version.py',
  '**/eyelink_track/commands/*',
  '**/eyelink_track/utils/_fixes.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'doc/*',
  'setup.py',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^eyelink_track.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []
minversion = '6.0'

[tool.ruff]
extend-exclude = [
  "doc",
  "setup.py",
]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['eyelink_track*tests']
include = ['eyelink_track*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
