[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
]
dependencies = [
  'click',
  'numpy>=1.21,<2',
  'packaging',
  'psutil',
  'psychopy',
  'qtpy',
  'sr-research-pylink',
  'wxPython',
]
description = 'Standalone eyelink calibration and recording with PsychoPy. '
keywords = [
  'eye-tracker',
  'eyelink',
  'python',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'eyelink_track'
readme = 'README.md'
requires-python = '==3.10.*'
version = '0.5.0.dev0'

[project.gui-scripts]
eyelink_track-gui = 'eyelink_track.commands.gui:run'

[project.optional-dependencies]
all = [
  'eyelink_track[build]',
  'eyelink_track[style]',
  'eyelink_track[test]',
  'pyqt6',
]
build = [
  'build',
  'twine',
]
full = [
  'eyelink_track[all]',
]
style = [
  'codespell[toml]>=2.2.4',
  'pre-commit',
  'ruff>=0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
eyelink_track = 'eyelink_track.commands.main:run'

[project.urls]
source = 'https://github.com/fcbg-platforms/eyelink-track'
tracker = 'https://github.com/fcbg-hp-meeg/eyelink-track/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.pytest_cache,.venv'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/eyelink_track/_version.py',
  '**/eyelink_track/utils/_fixes.py',
  '**/tests/**',
]

[tool.pytest.ini_options]
addopts = ['--color=yes', '--cov-report=', '--durations=20', '--junit-xml=junit-results.xml', '--strict-config', '--tb=short', '-ra', '-v']
junit_family = 'xunit2'
minversion = '8.0'

[tool.ruff]
extend-exclude = []
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904',  # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100',  # 'Missing docstring in public module'
  'D104',  # 'Missing docstring in public package'
  'D107',  # 'Missing docstring in __init__'
]
'__init__.py' = ['F401']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
ignore-decorators = ["eyelink_track.utils._docs.copy_doc"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['eyelink_track*tests']
include = ['eyelink_track*']

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true

[[tool.uv.index]]
explicit = true
name = "sr-research-pylink"
url = "https://pypi.sr-support.com"

[tool.uv.sources]
sr-research-pylink = {index = "sr-research-pylink"}
wxPython = {url = "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/wxPython-4.2.1-cp310-cp310-linux_x86_64.whl", marker = "sys_platform == 'linux'" }
